src/main/resources/static/css/style.css
/* Загальні стилі */
body {
    margin: 0;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-color: #1e1e1e;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.login-container {
    display: flex;
    gap: 60px;
    background-color: #2a2a2a;
    padding: 40px;
    border-radius: 15px;
    box-shadow: 0 8px 20px rgba(0,0,0,0.6);
    align-items: center;
}

/* Форма */
.login-form {
    display: flex;
    flex-direction: column;
    gap: 20px;
    width: 600px;
}

.login-form .logo {
    font-size: 48px;
    color: #3498db;
    font-weight: bold;
    text-align: center;
    margin-bottom: -10px;
}

.login-form h2 {
    color: #ffffff;
    font-weight: 0;
    text-align: center;
    margin-bottom: -5px;
}


.login-form input {
    padding: 12px;
    border-radius: 8px;
    border: none;
    background-color: #3b3b3b;
    color: white;
    font-size: 16px;
    width: 100%;
    max-width: 400px;
    box-sizing: border-box;
    display: block;
    margin: 0 auto;
}

.login-form input::placeholder {
    color: #aaa;
}

.login-form button {
    padding: 12px;
    border-radius: 8px;
    border: none;
    background-color: #3498db;
    color: white;
    font-weight: bold;
    font-size: 16px;
    cursor: pointer;
    transition: background-color 0.3s;
    width: 25%;
    max-width: 100px;
    display: block;
    margin: 0 auto;
}

.login-form button:hover {
    background-color: #2980b9;
}

.error-label {
    color: #e74c3c;
    font-size: 14px;
    min-height: 18px;
    text-align: center;   /* центрує текст */
    width: 100%;          /* робить ширину як у батьківського контейнера */
    max-width: 400px;     /* щоб не ширше за input */
    margin: 0 auto;       /* вирівнює по центру */
    display: block;
}

/* Посилання */
.links {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
    margin-top: 16px;
}

.link-blue {
    color: #3498db;
    text-decoration: none;
    font-weight: 500;
}

.link-green {
    color: #2ecc71;
    text-decoration: none;
    font-weight: 500;
}

.link-blue:hover, .link-green:hover {
    text-decoration: underline;
}

/* Зображення */
.login-image img {
    width: 300px;
    border-radius: 10px;
    box-shadow: 0 5px 15px rgba(0,0,0,0.5);
}

